--- a/views/map/index.ejs
+++ b/views/map/index.ejs
@@ -4,60 +4,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="stylesheet" href="/static/css/leaflet/leaflet.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <script src="/static/js/leaflet/leaflet.js"></script>
+    <link rel="shortcut icon" href="/static/assets/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/static/assets/libs/tabler/style.min.css">
+    <link rel="stylesheet" href="/static/assets/css/background.css">
+    <link rel="stylesheet" href="/static/assets/css/map.css">
+    <link rel="stylesheet" href="/static/assets/libs/leaflet/leaflet.css">
+    <script src="/static/assets/libs/leaflet/leaflet.js"></script>
     <title>Beat Saber FR - Carte interactive</title>
 </head>
-<body>
+<body class="" style="background: none;">
     <div class="background"><div class="blur"></div></div>
-    
-    <div class="container">
-        <form class="form">
-            <div class="card card-border">
-                <div class="card-title">Carte interactive</div>
-                <div class="card-body">
-                    <% if(!user.isBSFR) { %>
-                    <p>
-                        Vous devez être membre du serveur Discord BSFR afin de pouvoir visualiser la carte interactive.
-                    </p>
-                    <p>
-                        Vous pouvez nous rejoindre en cliquant sur ce lien d'invitation : <a href="<%= process.env.DISCORD_INVITATION_URL %>" target="_blank"><%= process.env.DISCORD_INVITATION_URL %></a>
-                    </p>
-                    <p>
-                        Actualisez la page après avoir rejoint le serveur Discord pour voir la carte.
-                    </p>
-                    <% } %>
 
-                    <hr>
-
-                    <span>Connecté en tant que : <a href="https://discordapp.com/users/<%= user.id %>" target="_blank"><%= user.username %>#<%= user.discriminator %></a> - <a href="/discord/logout">Se déconnecter</a></span>
+    <div class="page">
+        <header class="navbar navbar-expand-md navbar-dark sticky-top d-print-none">
+            <div class="container-xl">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <h1 class="navbar-brand d-none-navbar-horizontal pe-0 pe-md-3">
+                    <a href="/">
+                        <img src="/static/assets/images/logo.gif" width="32" height="32" alt="BSFR" class="navbar-brand-image me-2">
+                        Beat Saber FR
+                    </a>
+                </h1>
+                <div class="navbar-nav flex-row order-md-last">
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu" aria-expanded="false">
+                            <span class="avatar avatar-sm" style="background-image: url(https://cdn.discordapp.com/avatars/<%= user.id %>/<%= user.avatar %>.webp?size=80)"></span>
+                            <div class="d-none d-xl-block ps-2">
+                                <div><%= user.username %></div>
+                            </div>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                            <a href="/discord/logout" class="dropdown-item">Déconnexion</a>
+                        </div>
+                      </div>
                 </div>
             </div>
-
-            <% if(user.isBSFR) { %>
-            <div class="card">
-                <div class="card-body">
-                    <div id="map" style="width: 100%; height: 600px; position: relative; outline: none;" class="leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom" tabindex="0"></div>
+        </header>
+        
+        <div class="page-wrapper">
+            <div class="container-xl">
+                <!-- Page title -->
+                <div class="page-header d-print-none">
+                    <div class="row g-2 align-items-center">
+                        <div class="col">
+                            <h2 class="page-title text-white">
+                                Carte interactive
+                            </h2>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <% } %>
-        </form>
+            <div class="page-body">
+                <div class="container-xl">
+                    <div class="row mb-3">
+                        <div class="col-12">
+                            <form class="form">
+                                <% if(!user.isBSFR) { %>
+                                <div class="alert alert-danger" role="alert">
+                                    Vous devez être membre du serveur Discord BSFR afin de pouvoir visualiser la carte interactive.<br>
+                                    Vous pouvez nous rejoindre en cliquant sur ce lien d'invitation : <a href="<%= process.env.DISCORD_INVITATION_URL %>" target="_blank"><%= process.env.DISCORD_INVITATION_URL %></a><br>
+                                    <i>Actualisez la page après avoir rejoint le serveur Discord pour voir la carte.</i>
+                                </div>
+                                <% } %>
+
+                                <% if(user.isBSFR) { %>
+                                <div id="map" style="width: 100%; height: 600px; position: relative; outline: none;" class="leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom" tabindex="0"></div>
+                                <% } %>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <script src="/static/js/app.js"></script>
+    <script src="/static/assets/libs/tabler/script.min.js"></script>
+    <script src="/static/assets/js/app.js"></script>
     <% if(user.isBSFR) { %>
-    <script src="/static/js/map.js"></script>
-    <% } %>
-
-    <% if(typeof error !== 'undefined' || typeof success !== 'undefined') { %>
-    <script>
-        showAlert(<%= typeof error !== 'undefined' ? 'false' : 'true' %>, '<%= typeof error !== 'undefined' ? error : success %>')
-    </script>
+    <script src="/static/assets/js/map.js"></script>
     <% } %>
 </body>
 </html>
