Ajout d'un popup de confirmation lors de l'envoi d'une run

--- a/views/run/index.ejs
+++ b/views/run/index.ejs
@@ -161,6 +161,23 @@
         </div>
     </div>
 
+    <div class="modal" tabindex="-1" id="modalRun">
+        <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-status"></div>
+                <div class="modal-body text-center py-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon d-none mb-2 text-red icon-lg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><circle cx="12" cy="12" r="9"></circle><path d="M10 10l4 4m0 -4l-4 4"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon d-none mb-2 text-green icon-lg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><circle cx="12" cy="12" r="9"></circle><path d="M9 12l2 2l4 -4"></path></svg>
+                    <h3>Envoi d'une run</h3>
+                    <div id="upload-status" class="text-muted"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-white w-100" data-bs-dismiss="modal">Fermer</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="/static/assets/libs/tabler/script.min.js"></script>
     <script src="/static/assets/libs/autosize/autosize.min.js"></script>
     <script src="/static/assets/js/app.js"></script>
