Mise à jour de la map sélectionnée

--- a/views/mpov/index.ejs
+++ b/views/mpov/index.ejs
@@ -63,16 +63,16 @@
                             <h4>Map sélectionnée :</h4>
                             <div class="row">
                                 <div class="col-12 col-lg-6">
-                                    <a class="card mb-3" href="https://beatsaver.com/maps/21380" target="_blank">
+                                    <a class="card mb-3" href="https://beatsaver.com/maps/1f4ca" target="_blank">
                                         <div class="card-status-start bg-blue"></div>
                                         <div class="card-body">
                                             <div class="row d-flex align-items-center">
                                                 <div class="col-auto">
-                                                    <span class="avatar avatar-xl" style="background-image: url(https://eu.cdn.beatsaver.com/7b593a99940898b637846a875c5b8405a9d63722.jpg)"></span>
+                                                    <span class="avatar avatar-xl" style="background-image: url(https://eu.cdn.beatsaver.com/994ab1b532176e158d0ad095cd7a97398a8c53e0.jpg)"></span>
                                                 </div>
                                                 <div class="col">
-                                                    <h3>Akatsuki Records - HELLOHELL</h3>
-                                                    <div class="text-muted"><strong>Mapper par:</strong> Skeelie, AaltopahWi & Yaomin</div>
+                                                    <h3>USAO - Phalanx</h3>
+                                                    <div class="text-muted"><strong>Mapper par:</strong> Timbo</div>
                                                     <div class="text-muted"><strong>Difficulté:</strong> <span class="badge bg-purple">Expert+</span></div>
                                                 </div>
                                             </div>
