Activation de l'auto complétion sur certains champs

--- a/views/run/index.ejs
+++ b/views/run/index.ejs
@@ -102,7 +102,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label required">Profil Scoresaber</label>
-                                    <input type="text" class="form-control" id="scoresaber_profil" placeholder="https://scoresaber.com/u/76561198796531407" autocomplete="off" required>
+                                    <input type="text" class="form-control" id="scoresaber_profil" placeholder="https://scoresaber.com/u/76561198796531407" required>
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label required">Leaderboard de la map</label>
@@ -131,11 +131,11 @@
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label required">Votre grip</label>
-                                    <input type="text" class="form-control" id="grip" placeholder="Default grip" autocomplete="off" required>
+                                    <input type="text" class="form-control" id="grip" placeholder="Default grip" required>
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Votre chaîne Twitch</label>
-                                    <input type="text" class="form-control" id="twitch_url" placeholder="https://twitch.tv/beatsaberfr" autocomplete="off">
+                                    <input type="text" class="form-control" id="twitch_url" placeholder="https://twitch.tv/beatsaberfr">
                                 </div>
                                 <div>
                                     <label class="form-label">Commentaire du joueur (apparaitra en description de la vidéo)</label>
