Correction d'une faute

--- a/views/mpov/index.ejs
+++ b/views/mpov/index.ejs
@@ -72,7 +72,7 @@
                                                 </div>
                                                 <div class="col">
                                                     <h3>USAO - Phalanx</h3>
-                                                    <div class="text-muted"><strong>Mapper par:</strong> Timbo</div>
+                                                    <div class="text-muted"><strong>Mapper:</strong> Timbo</div>
                                                     <div class="text-muted"><strong>Difficulté:</strong> <span class="badge bg-purple">Expert+</span></div>
                                                 </div>
                                             </div>
