--- a/views/mpov/index.ejs
+++ b/views/mpov/index.ejs
@@ -118,10 +118,7 @@
                         </div>
                         <div class="card-footer">
                             <div class="row">
-                                <div class="col me-auto">
-                                    <button type="button" class="btn btn-danger btn-clear">Effacer le formulaire</button>
-                                </div>
-                                <div class="col-auto">
+                                <div class="col-auto ms-auto">
                                     <button type="submit" class="btn btn-primary">Envoyer</button>
                                 </div>
                             </div>
