--- a/views/mpov/index.ejs
+++ b/views/mpov/index.ejs
@@ -105,25 +105,31 @@
                     <% } %>
 
                     <% if(user.isBSFR) { %>
-                    <form class="card form">
-                        <div class="card-body">
-                            <div class="mb-3">
-                                <label class="form-label"><span style="font-weight: bold; color: #FF0000;">*</span> : champ requis</label>
-                            </div>
-                            <div class="mb-3">
-                                <label class="form-label required">Fichier de la run</label>
-                                <input type="file" class="form-control" id="video" required>
-                                <small class="form-hint">Fichier .mp4 conseillé, .mkv refusé</small>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <div class="row">
-                                <div class="col-auto ms-auto">
-                                    <button type="submit" class="btn btn-primary">Envoyer</button>
+                        <% if(Date.now() >= startDate && Date.now() < endDate) { %>
+                        <form class="card form">
+                            <div class="card-body">
+                                <div class="mb-3">
+                                    <label class="form-label"><span style="font-weight: bold; color: #FF0000;">*</span> : champ requis</label>
+                                </div>
+                                <div class="mb-3">
+                                    <label class="form-label required">Fichier de la run</label>
+                                    <input type="file" class="form-control" id="video" required>
+                                    <small class="form-hint">Fichier .mp4 conseillé, .mkv refusé</small>
                                 </div>
                             </div>
+                            <div class="card-footer">
+                                <div class="row">
+                                    <div class="col-auto ms-auto">
+                                        <button type="submit" class="btn btn-primary">Envoyer</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                        <% } else { %>
+                        <div class="alert alert-info" role="alert">
+                            <div class="text-muted">La soumission de vidéo Multi POV BSFR #3 est fermée</div>
                         </div>
-                    </form>
+                        <% } %>
                     <% } %>
                 </div>
             </div>
